refactor: convert deprecated VO to String